--- a/app/views/issues/_checklist_form.html.erb
+++ b/app/views/issues/_checklist_form.html.erb
@@ -13,7 +13,7 @@
           accept: 'text/plain' %>
 
       <%= javascript_tag "observeIssueChecklistField('checklist_form_items', 'add_checklist_item_input', 'add_checklist_item_button', 'import_checklist_items_input');" %>
-      <%= javascript_tag "createIssueChecklist(#{@issue.checklist.collect { |cli| { is_done: cli.is_done, subject: cli.subject, id: cli.id } }.to_json.html_safe});" %>
+      <%= javascript_tag "createIssueChecklist(#{@issue.checklist.sort_by(&:id).collect { |cli| { is_done: cli.is_done, subject: cli.subject, id: cli.id } }.to_json.html_safe});" %>
     </p>
   </div>
 <% end if User.current.allowed_to?(:edit_checklists, @project) -%>
